# demo

book/: .gitignore  pyproject.toml
book/data/book/: config.yaml
book/data/book/catalog/: Claude宪法.txt  一句顶一万句.txt  传习录.txt  是什么缔造了汉江奇迹.txt  正念-卡巴金.txt  正念的奇迹.txt  百年孤独.txt  自控力.txt
book/data/catalog/: 当下的力量.txt  深入浅出软件架构.txt  系统设计面试.txt
book/data/prompt/: link.txt  nolink.txt  translate.txt
book/data/yaml/: config.yaml
book/docs/hackmd/: api.md
book/src/: .env.example
book/src/book/: __init__.py  add_prompt.py  build_catalog.py  llm_process.py  split_book.py  utils.py
book/src/common/: __init__.py
book/src/common/client/: __init__.py  hackmd_client.py  llm_client.py
book/src/common/config/: __init__.py  settings.py
book/src/common/models/: __init__.py  hackmd.py
book/src/common/utils/: __init__.py  logger.py  path_manager.py
book/src/hackmd/: sync_note_detail.py  sync_notes.py  upload_notes.py
book/src/llm_editor/: __init__.py  utils.py
book/src/llm_editor/article/: add_prompt.py  clean.py  llm_process.py
book/src/llm_editor/base/: __init__.py  batch_processor.py  llm_client.py
book/src/llm_editor/book/: 01_split_book.py  02_build_catalog.py  03_add_prompt.py  04_llm_process.py  __init__.py  add_prompt.py  build_catalog.py  llm_process.py  split_book.py
book/src/llm_editor/book/01_split_book/: 01_split_by_markdown.py
book/src/llm_editor/epub/: __init__.py  epub_to_txt.py
book/src/llm_editor/epub/chinese/: __init__.py  split_chapters.py
book/src/llm_editor/subtitle/: extract_txt.py
docs/prompt/: 1-1.txt  2-2.txt
go/: .gitignore  README.md
go/src/gin/: example.go
go/src/greeting/: main.go
go/src/hello/: go.mod  go.sum  hello.go
java/: .gitignore
java/common/hello/: pom.xml
java/common/leetcode/: pom.xml
java/root/: pom.xml
java/root/common/: pom.xml
java/spring/ut/: pom.xml
js/type/: package.json
js/type/src/: index.ts
python/: .gitignore  pyproject.toml
python/common/: .gitignore  copy_file.py  main.py  pyproject.toml
python/common/data/: .env.example
python/common/notebook/.ipynb_checkpoints/: test-checkpoint.ipynb
python/common/notebook/milvus/: hello.ipynb
python/common/notebook/milvus/.ipynb_checkpoints/: langchain-checkpoint.ipynb
python/common/src/common/: env_var.py  path_type.py
python/common/src/sftp/: __init__.py  sftp_speed_test.py
python/common/src/utils/: path_manager.py  settings.py
python/common/template/my_jinja/: demo.py
python/common/template/my_jinja/templates/: base.html  forms.html  index.html  products.html  user_profile.html
python/common/web/my_fastapi/: main.py  models.py
python/data/: squares.py
python/data_analysis/my_elk/: demo.py
python/data_analysis/my_ibis/: demo.py
python/data_analysis/my_lancedb/: demo_oss.py
python/notebook/: embedding.ipynb  openai.ipynb
python/rubik/: main.py  pyproject.toml  requirements-dev.txt  requirements-exp.txt  requirements-gui.txt  requirements.txt
python/rubik/src/zxh_ahvn/: vdb_demo.py
rust/: .gitignore  README.md
rust/httpie/: Cargo.toml  README.md
web/type_js_demo/: package-lock.json  package.json
(+126 files in other folders)
