[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "paramiko>=4.0.0",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["src"]  # 指定从 src 目录查找包

[tool.setuptools.package-dir]
"" = "src"  # 设置包的根目录为 src
