[project]
name = "rubik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler",
    "babel",
    "click",
    "cloudpickle",
    "dill",
    "diskcache",
    "docstring-parser",
    "Jinja2",
    "litellm",
    "llama-index-core",
    "openai",
    "polib",
    "protobuf~=6.31.1",
    "prettytable",
    "pydantic",
    "requests",
    "sqlalchemy",
    "sqlglot",
    "termcolor",
    "tenacity",
]

[project.optional-dependencies]
gui = [
    "streamlit",
    "streamlit-ace",
    "watchdog",
]
experimental = [
    "asyncpg",
    "chromadb",
    "duckdb==1.3.2",
    "duckdb-engine",
    "fastmcp",
    "lancedb",
    "llama-index-tools-neo4j",
    "llama-index-vector-stores-chroma",
    "llama-index-vector-stores-lancedb",
    "llama-index-vector-stores-milvus",
    "llama-index-vector-stores-postgres",
    "neo4j",
    "neo4j-rust-ext",
    "ollama",
    "prompt_toolkit",
    "psycopg2",
    "pyahocorasick",
    "pyarrow",
    "pymilvus",
    "pymysql",
    "sandboxai-client",
    "spacy",
]
dev = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-intl>=2.1.0",
    "myst-parser>=2.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-tabs>=3.4.1",
    "sphinxcontrib-mermaid>=0.9.2",
    "furo>=2023.9.10",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-external-toc>=1.0.1",
    "sphinxext-opengraph>=0.9.0",
    "sphinx-design>=0.5.0",
    "nbsphinx>=0.9.1",
    "sphinx-gallery>=0.14.0",
    "doc8>=1.1.1",
    "rstcheck>=6.2.0",
    "linkchecker>=10.2.1",
    "flake8>=7.1.1",
    "black[jupyter]",
    "pre-commit>=3.8.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
]
